# site

./: .gitattributes  .gitignore  Dockerfile  build.sh  default.nix  index.md  keybase.txt  publish.sh  site.cabal  site.hs  stack.yaml
docker-support/: nginx.default.conf
nix/haskell/: add.sh  pandoc-2.10.1.nix  pandoc-types-1.21.nix  site.nix
pages/: cordic.md  index.md  malloc3.md  malloc4.md  misa-design.md  music.md  processor1.md  spi.md
src/: Main.hs
static/css/: site.css
static/download/: cordic.v  cordic_test.v  spi_master_driver.v
templates/: default.html
