name:                site
version:             0.1.0.0
synopsis:            Source code of http://kierdavis.com/
homepage:            https://github.com/kierdavis/site
license:             PublicDomain
license-file:        LICENSE
author:              Kier Davis
maintainer:          me@kierdavis.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable site
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll
                     , pandoc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kierdavis/site

